[package]
name = "bitcoin-block-parser"
version = "0.3.3"
edition = "2021"
authors = ["Saigo Nanshu"]
license = "MIT"
repository = "https://github.com/sumopool/bitcoin-block-parser"
readme = "README.md"
description = "Fast optimized parser for the bitcoin `blocks` data with UTXO tracking."
categories = ["cryptography::cryptocurrencies"]
keywords = [ "crypto", "bitcoin" ]
documentation = "https://docs.rs/bitcoin-block-parser"

[dependencies]
bitcoin = "0.32.2"
anyhow = "1.0.88"
threadpool = "1.8.1"
rustc-hash = "2.0.0"
crossbeam-channel = "0.5.13"
log = "0.4.22"

# Could make the following deps into a feature
postcard = { version = "1.0.10", features = ["use-std"] }
scalable_cuckoo_filter = { version = "0.3.2", features = ["serde_support"] }
clap = { version = "4.5.16", features = ["derive"] }
rand = {  version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.210", features = ["derive"] }
env_logger = "0.11.5"