[package]
name = "bitcoin-block-parser"
version = "0.4.0"
edition = "2021"
authors = ["Saigo Nanshu"]
license = "MIT"
repository = "https://github.com/sumopool/bitcoin-block-parser"
readme = "README.md"
description = "Fast optimized parser for the bitcoin `blocks` data with UTXO tracking."
categories = ["cryptography::cryptocurrencies"]
keywords = [ "crypto", "bitcoin" ]
documentation = "https://docs.rs/bitcoin-block-parser"

[features]
default = ["utxo"]
utxo = ["rand", "clap", "scalable_cuckoo_filter", "postcard", "serde"]
examples = ["utxo", "env_logger"]

[dependencies]
bitcoin = "0.32.2"
anyhow = "1.0.88"
threadpool = "1.8.1"
rustc-hash = "2.0.0"
crossbeam-channel = "0.5.13"
log = "0.4.22"

# Optional dependencies you can remove by setting "default-features = false"
postcard = { version = "1.0.10", features = ["use-std"], optional = true }
scalable_cuckoo_filter = { version = "0.3.2", features = ["serde_support"], optional = true }
clap = { version = "4.5.16", features = ["derive"], optional = true }
rand = {  version = "0.8.5", features = ["small_rng"], optional = true }
serde = { version = "1.0.210", features = ["derive"], optional = true }
env_logger = { version = "0.11.5", optional = true }