[package]
name = "bitcoin-block-parser"
version = "0.5.1"
edition = "2021"
authors = ["Saigo Nanshu"]
license = "MIT"
repository = "https://github.com/sumopool/bitcoin-block-parser"
readme = "README.md"
description = "Fast optimized parser for the bitcoin `blocks` data with UTXO tracking."
categories = ["cryptography::cryptocurrencies"]
keywords = [ "crypto", "bitcoin" ]
documentation = "https://docs.rs/bitcoin-block-parser"

[dependencies]
bitcoin = "0.32.2"
anyhow = "1.0.88"
threadpool = "1.8.1"
crossbeam-channel = "0.5.13"
log = "0.4.22"
scalable_cuckoo_filter = { version = "0.3.2", features = ["serde_support"] }
clap = { version = "4.5.16", features = ["derive"] }
rand = {  version = "0.8.5", features = ["small_rng"] }
bincode = "1.3.3"
env_logger = "0.11.5"
dashmap = "6.1.0"